# LinearNurikabeSolverWeb

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  web_build.bat
.github/workflows/: EmscriptenBuildDeploy.yml
SolverWeb/: SolverWeb.html  SolverWeb.js  SolverWeb.wasm
projects/LinearNurikabeSolverWeb/: CMakeLists.txt
projects/LinearNurikabeSolverWeb/inc/: LinearNurikabeSolverWeb.h
projects/LinearNurikabeSolverWeb/src/: LinearNurikabeSolverWeb.cpp
